prometheus/ingress/prom/istio/base/prometheus-virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: $(namespace)
spec:
  gateways:
  - prometheus-gateway
  hosts:
  - "$PROMETHEUS_DOMAINNAME"
  http:
  - headers:
      request:
        set:
          X-Forwarded-Proto: https
    match:
    - uri:
        prefix: /
    name: prometheus-ingress
    route:
    - destination:
        host: prometheus-kube-prometheus-prometheus.monitoring.svc.cluster.local
        port:
          number: 9090
